# client-csharp

./: .gitignore  README.md  build-all.bat  build-all.sh  conanfile.py
.github/workflows/: build.yml
examples/: Makefile  plaintext.txt  sample.cs
src/: CMakeLists.txt  virtru.i
